react-app/src/components/CreateDesignForm/CreateDesignForm.css
.create-des-container {
  height: 100vh;
  /* border: red solid 1px; */
}

.edit-container {
  display: flex;
  /* box-sizing: border-box; */

  height: 100%;
  width: 100%;
}

.edit-area {
  background-color: rgb(235,236,240);
  height: 100vh;
  width: 100%;
  padding: 40px;
  display: flex;
  justify-content: center;
  /* align-items: center; */
}

.form-inputs {
  display: flex;

}

#inserted-temp {
  top: 80px;
}

#under-construction {
  position: absolute;
  z-index: 5;

  top: 70px;
  width: 1000px;
  height: 700px;

  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(205, 205, 205, 0.7);

  font-size: 40px;
  font-weight: 700;
  font-style: oblique;
}

/* SIDEBAR */
.sidebar {
  display: flex;
  flex-direction: column;
  width: 80px;
  background-color: rgb(45, 46, 47);
}

.sidebar button {
  display: flex;
  justify-content: center;
  align-items: flex-end;
  font-weight: 600;
  font-size: 10px;
  margin: 5px;
  padding: 4px;

  height: 70px;
  background-color: rgb(45, 46, 47);
}


.temp-menu-container {
  overflow: hidden;
}

#temp-menu-item,
#temp-menu-item-brand {
  display: flex;
  flex-direction: column;
  justify-content: center;

  flex-flow: wrap row;
  overflow: scroll;
  overflow-x: hidden;
  text-overflow: ellipsis;

  position: absolute;
  background-color: rgb(45, 46, 47);
  width: 400px;
  height: 100vh;

  z-index: 1;
  top: 68px;
  left: 65px;

  text-align: center;
  padding: 20px;


  font-weight: 700;
  font-size: 16px;
  color: white;
  cursor: pointer;
}

#brand-side-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-weight: 700;
  font-size: 16px;
  color: white;

  align-items: center;
  overflow: hidden;
}

#brand-side-content button {
  background-color: rgb(153,170,179);
  height: fit-content;
  font-size: 16px;
  margin-top: 20px;
  padding: 8px 12px;
}

#warning {
  color: white;
  font-size: 12px;
  font-weight: 500;
  margin: 20px;
  width: 20px;
}

#temp-img-des {
  margin-right: 20px;
  height: fit-content;
  display: flex;
  flex-direction: column;
  border-radius: 4px;
}

#create-des-temp-button {
  height: fit-content;
  margin: 10px 0;
  padding: 0;
  width: 130px;
}


/* FORM AREA/NAV */
.create-des-form {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

#create-des-button {
  padding: 8px 12px;
  margin: 0 8px;
}

#create-des-button:hover {
  background-color: rgba(153,170,179, 0.4);
}

#des-name {
  border: none;
  border-bottom: 1px solid rgb(235, 235, 235);
  border-radius: 4px;
  margin: 0 10px;
  padding: 10px;
}

#des-name:focus {
  /* border-bottom: transparent; */
  outline: 1px solid rgb(235, 235, 235);
}

#des-name::placeholder {
  color: rgb(225, 225, 225)
}

#home-button {
  display: flex;
  align-items: center;
  font-weight: 600;
  padding: 8px 12px;
  margin-left: 10px;
  border-radius: 4px;
}

#home-button:hover {
  background-color: rgba(153,170,179, 0.4);
  cursor: pointer;
}

#home-button img {
  margin-right: 20px;
}

